修改文件动态加载

--- a/web/download.html
+++ b/web/download.html
@@ -40,23 +40,24 @@
 				<div class="type_container">
 					<strong class="fl">专业：</strong>
 					<ul> 
-	                    <li class="pro cr">采矿工程</li>
-	                    <li class="pro">石油工程</li>
+						<li class="pro cr">全部</li>
+						<li class="pro">石油工程</li>
+	                    <li class="pro">采矿工程</li>
 	                    <li class="pro">地质工程</li>
 	                    <li class="pro">矿物加工工程</li>
 	                    <li class="pro">资源勘查工程</li>
-	                    <li class="pro">勘查技术与工程</li>
+	                    <li class="pro last">勘查技术与工程</li>
 	                </ul>
 	                <div class="separate"></div>
-	                <strong class="fl">课程：</strong>
+	                <!-- <strong class="fl">课程：</strong>
 	                <ul id="subject">
 	                    <li class="sub cr">全部</li>
 	                    
-	                </ul>
+	                </ul> -->
                 </div>
                 <!-- 文件显示区域 -->
 				<div class="file clear">
-					 <table>
+					 <table id="files">
 					 	<tr class="th">
 					 		<td class="first">文档名称</td>
 					 		<td>上传者</td>
@@ -64,146 +65,7 @@
 					 		<td>学期</td>
 					 		<td>下载量</td>
 					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理课后习题答案</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">久香</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>100</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理学半期考试复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">西红柿玉米</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>78</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">【自己总结】超全的物理期末复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">麻辣小龙虾</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>55</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_pdf"></i><a href="javascript:;">【精选】物理学期考试复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">夫妻肺片</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>40</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_pdf"></i><a href="javascript:;">物理学试题完整版</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">红烧牛肉</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>38</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理2014学期期末考试题</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">夫妻肺片</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>35</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_ppt"></i><a href="javascript:;">物理第一章课堂PPt</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">酸汤肥牛</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>32</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_ppt"></i><a href="javascript:;">物理第二章课堂PPt</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">酸汤肥牛</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>32</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_ppt"></i><a href="javascript:;">物理第三章课堂PPt</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">酸汤肥牛</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>32</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">【原创】物理笔记总结</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">三顾冒菜</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>30</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">【原创】物理笔记总结--第一章</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">久香冒菜</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>29</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">【原创】物理笔记总结--第二章</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">久香冒菜</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>26</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理课后习题答案</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">久香</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>100</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理学半期考试复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">西红柿玉米</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>78</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">【自己总结】超全的物理期末复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">麻辣小龙虾</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>55</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_pdf"></i><a href="javascript:;">【精选】物理学期考试复习资料</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">夫妻肺片</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>40</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_pdf"></i><a href="javascript:;">物理学试题完整版</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">红烧牛肉</a></td>
-					 		<td>安文雅</td>
-					 		<td>2015(上)</td>
-					 		<td>38</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_word"></i><a href="javascript:;">物理2014学期期末考试题</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">夫妻肺片</a></td>
-					 		<td>李佩佩</td>
-					 		<td>2015(上)</td>
-					 		<td>35</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_ppt"></i><a href="javascript:;">物理第一章课堂PPt</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">酸汤肥牛</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(下)</td>
-					 		<td>32</td>
-					 	</tr>
-					 	<tr>
-					 		<td class="first"><i class="icon-s icon_ppt"></i><a href="javascript:;">物理第二章课堂PPt</a></td>
-					 		<td><i class="icon-s icon_user"></i><a href="">酸汤肥牛</a></td>
-					 		<td>陶大傻</td>
-					 		<td>2015(上)</td>
-					 		<td>32</td>
-					 	</tr>
+					 	
 					 </table>
 				</div>
 				<!-- end -->
