分享经验模块添加了发表经验功能

--- a/web/experience.html
+++ b/web/experience.html
@@ -369,10 +369,38 @@
 		</div>
 		
 		<div  class="fixed">
-			<a href="#" class="new db" title="分享我的经验"></a>
+			<a href="javascript:;" class="new db" title="分享我的经验"></a>
 			<a href="#" class="toTop db" title="回到顶部"></a>
 		</div>
 		
+		
+	</div>
+
+	<div class="mask">
+		<span id="close">×</span>
+		<div class="newExp">
+			<input type="text" name="" class="text" placeholder="请输入标题">
+			<textarea class="text textarea"></textarea>
+			<div class="insert">
+				<i class="icon-s icon_emoij emoijBtn"></i>
+				<div class="pic icon-s icon_pic">
+					<input type="file" name="" value=" " class="pa">
+				</div>
+				<select class="text">
+					<option>期末</option>
+					<option>四级</option>
+					<option>六级</option>
+					<option>雅思</option>
+				</select>
+				<a href="javascript:;" class="button">发表</a>
+			</div>
+			<div class="insert">
+				<div class="emoij">
+					<span>[微笑]</span> <span>[哭泣]</span> <span>[伤心]</span> <span>[难过]</span><span>[可爱]</span> <span>[调皮]</span> <span>[生气]</span> <span>[大哭]</span> <span>[小狗]</span> <span>[小猫]</span><span>[太阳]</span> <span>[月亮]</span> <span>[挥手]</span> <span>[开心]</span> <span>[委屈]</span>
+				</div>
+			</div>
+			
+		</div>
 		
 	</div>
 
