利用css和原生js重写了select的样式

--- a/web/experience.html
+++ b/web/experience.html
@@ -386,12 +386,18 @@
 				<div class="pic icon-s icon_pic">
 					<input type="file" name="" value=" " class="pa">
 				</div>
-				<select class="text">
-					<option>期末</option>
-					<option>四级</option>
-					<option>六级</option>
-					<option>雅思</option>
-				</select>
+				<div class="re-select text">
+				<span class="re-selected">类别</span>
+				<ul class="re-options">
+					<li class="re-option">期末</li>
+					<li class="re-option">四级</li>
+					<li class="re-option">六级</li>
+					<li class="re-option">托福</li>
+					<li class="re-option">雅思</li>
+				</ul>
+				<span class="arrow"></span>
+			</div>
+				
 				<a href="javascript:;" class="button">发表</a>
 			</div>
 			<div class="insert">
