--- a/web/test01.html
+++ b/web/test01.html
@@ -17,7 +17,10 @@
 
 <script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript">
-
+    var div = document.getElementsByTagName('div');
+    var a = Array.prototype.slice.call(div);
+   // var name = Object.prototype.toString.call(document.getElementsByTagName('div'));
+console.log(a);
 </script>
 </body>
 </html>
