经验分享模块--利用js动态添加对应类别的内容

--- a/web/experience.html
+++ b/web/experience.html
@@ -38,335 +38,10 @@
 			</ul>
 		</div>
 
-		<!-- 期末 -->
-		<div class="main unhide">
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"></span><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来】">【分享一下我平时不听课期末高数如何逆袭90+，感兴趣的来!】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
+		<!-- 根据目录加载对应的数据 -->
+		<div class="main unhide" id="exps">	
 		</div>
-		<!-- end -->
-
-		<!-- 四级 -->
-		<div class="main">
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【四级真的超简单的！分享一下我的四级经验~】">【四级真的超简单的！分享一下我的四级经验~】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!-- end -->
-
-
-		<!-- 六级 -->
-		<div class="main">
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【【裸考六级500+有这些小诀窍！】">【裸考六级500+有这些小诀窍！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!-- end -->
-
-		<!-- 托福 -->
-		<div class="main">
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【呵呵~托福8.5，就是这么容易！戳进来看看吗？】">【呵呵~托福8.5，就是这么容易！戳进来看看吗？】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【呵呵~托福8.5，就是这么容易！戳进来看看吗？】">【呵呵~托福8.5，就是这么容易！戳进来看看吗？】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【呵呵~托福8.5，就是这么容易！戳进来看看吗？】">【呵呵~托福8.5，就是这么容易！戳进来看看吗？】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【呵呵~托福8.5，就是这么容易！戳进来看看吗？】">【呵呵~托福8.5，就是这么容易！戳进来看看吗？】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【呵呵~托福8.5，就是这么容易！戳进来看看吗？】">【呵呵~托福8.5，就是这么容易！戳进来看看吗？】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<!-- 雅思 -->
-		<div class="main">
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-			<div class="item">
-				<ul>
-					<li class="time">2015/3/15</li>
-					<li class="theme"><a href="" title="【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】">【还在害怕雅思考试吗？点进来，我教你如何三个月逆袭！】</a></li>
-					<li class="author">
-						<img src="images/icon_author.svg"><a href="">飞翔的鱼</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+		
 		
 		<div  class="fixed">
 			<a href="javascript:;" class="new db" title="分享我的经验"></a>
@@ -416,6 +91,7 @@
 
 
 <script type="text/javascript" src="js/oo.js"></script>
+<script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/experience.js"></script>
 </body>
 </html>
