m增加你问我答模块

--- a/web/download.html
+++ b/web/download.html
@@ -14,6 +14,9 @@
 			<a href="index.html">首&nbsp&nbsp&nbsp&nbsp页</a>
 			<a href="date.html">约人复习</a>
 			<a href="experience.html">经验分享</a>
+			<a href="answers.html">你问我答</a>
+			<a href="video.html">视频学习</a>	
+			<a href="gowhere.html">去哪学习</a>
 			<a href="homepage.html" class="homepage" title="进入个人中心">
 				<img src="images/user.jpg">
 			</a>
@@ -49,11 +52,6 @@
 	                    <li class="pro last">勘查技术与工程</li>
 	                </ul>
 	                <div class="separate"></div>
-	                <!-- <strong class="fl">课程：</strong>
-	                <ul id="subject">
-	                    <li class="sub cr">全部</li>
-	                    
-	                </ul> -->
                 </div>
                 <!-- 文件显示区域 -->
 				<div class="file clear">
