--- a/web/experience.html
+++ b/web/experience.html
@@ -14,6 +14,9 @@
 			<a href="index.html">首&nbsp&nbsp&nbsp&nbsp页</a>
 			<a href="download.html">资料下载</a>
 			<a href="date.html">约人复习</a>
+			<a href="answers.html">你问我答</a>
+			<a href="video.html">视频学习</a>	
+			<a href="gowhere.html">去哪学习</a>
 			<a href="homepage.html" class="homepage" title="进入个人中心">
 				<img src="images/user.jpg">
 			</a>
