--- a/web/homepage.html
+++ b/web/homepage.html
@@ -16,6 +16,9 @@
 			<a href="download.html">资料下载</a>
 			<a href="date.html">约人复习</a>
 			<a href="experience.html">经验分享</a>
+			<a href="answers.html">你问我答</a>
+			<a href="video.html">视频学习</a>	
+			<a href="gowhere.html">去哪学习</a>
 		</nav>
 	</header>
 
